---
source: compiler-core/src_refactored/__core/type_/tests/type_alias.rs
assertion_line: 78
expression: "\ntype A(a, a) =\n  List(a)\n"
snapshot_kind: text
---
----- SOURCE CODE

type A(a, a) =
  List(a)


----- ERROR
error: Duplicate type parameter
  ┌─ /src/one/two.gleam:2:11
  │
2 │ type A(a, a) =
  │           ^

This definition has multiple type parameters named `a`.
Rename or remove one of them.
